--- a/LSA.ipynb
+++ b/LSA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
        "u'from: amoss@shuldig.cs.huji.ac.il (amos shapira)\\nsubject: re: final solution in palestine ?\\norganization: inst. of comp. sci., hebrew university, jerusalem, israel\\nlines: 30\\nnntp-posting-host: shuldig.cs.huji.ac.il\\nin-reply-to: ahmeda@mcrcim.mcgill.edu\\'s message of sun, 25 apr 93 17:10:03 gmt\\n\\nahmeda@mcrcim.mcgill.edu (ahmed abu-abed) writes:\\n\\n|what hamas and islamic jihad believe in, as far as i can get from the arab\\n|media,\\n|is an islamic state that protects the rights of all its inhabitants under\\n|koranic\\n|law. this would be a reversal of the 1948 situation in which the jews in\\n|palestine took control of the land and its (mostly muslim) inhabitants.\\n\\nthe borders of the jewish state as drawn by the u.n. included the areas which\\ncontained mostly jews,  that\\'s what the surveys and the numerous commitees\\nwhere after when they visited here.\\n\\n|however, whoever committed crimes against humanity (torture, blowing up their\\n|homes, murders,...) must be treated and tried as a war criminal. the political\\n|thought of these movements shows that a freedom of choice will be given to the\\n|jews in living under the new law or leaving to the destintion of their choice.\\n\\ni never touched an arab during my army service and never voted for anyone more\\nright than the green party.  will i be spared by these \"humanist standards\"?\\n(or will anyone stop to consider this before sloughtering me?)\\n\\ni doubt it.  and not only because of the past record of murdering helpless\\nwomen and children since the turn of the century up to these days.\\n\\n--\\n--amos shapira (jumper extraordinaire) |  \"it is true that power corrupts,\\nc.s. system group, hebrew university,  |   but absolute power is better!\"\\njerusalem 91904, israel                |\\namoss@cs.huji.ac.il                    |          -- the demon to his son\\n'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,12 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#Now that we have downloaded stop words lets add words to stopwords list\n",
     "stopset = set(stopwords.words('english'))\n",
     "stopset.update(['\\n','ed','orin','mean','tog','gmt','edu','subject', 're','nntp','article',\n",
     "                'didn','nntp','posting','reply','host','right','utsa','tar','murderous','only',\n",
