Update Naive bayes for spam-class.ipynb

--- a/Naive bayes for spam-class.ipynb
+++ b/Naive bayes for spam-class.ipynb
@@ -338,9 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    We can see that \"Welcome home\" is taken as not spam or ham which is why the value is 0 \n",
+    "    We can see that \"Welcome home\" is predicted as not spam or ham which is why the value is 0 \n",
     "     and\n",
-    "    \"You have won a lottery prize\" is taken as spam which is why the vlaue is 1"
+    "    \"You have won a lottery prize\" is predicted as spam which is why the value is 1"
    ]
   },
   {
